--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <main class="flex-shrink-0">
          <div class="container mt-5">
             <h3 id="result">
-               The generated string session was sent to saved messages.
+               Check your Telegram Saved messages for Session String.
             </h3>
             <input
                id="apiId"
