compactible with github pages

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   <body class="light">
     <div class="appBar">
       <span style="position: fixed;left: 10px;top: 9px">
-        <img src="/favicon.ico" alt="icon" width="32px" height="32px" ondragstart="return false;" />
+        <img src="favicon.ico" alt="icon" width="32px" height="32px" ondragstart="return false;" />
       </span>
-      <span class="light">BSSG</span>
+      <span class="light">Session String Generator</span>
       <label class="switch">
         <input type="checkbox" id="darkTheme">
         <span class="slider round"></span>
