--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <footer class="footer has-background-white">
       <div class="content has-text-centered">
         <p>
-          &copy; 2021 <b>Roj Serbest</b> ·
+          &copy; 2021 <a href="https://rojser.best">Roj Serbest</a> ·
           <a href="https://github.com/rojserbest/bssg">Source Code</a>
         </p>
       </div>
