Update footer links

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
     </main>
     <footer class="mt mb">
       <p>
-        &copy; 2021 <a href="https://rojser.best">Roj Serbest</a> ·
-        <a href="https://github.com/rojserbest/bssg">Source</a>
+        &copy; 2021 <a href="https://roj.im">Roj Serbest</a> ·
+        <a href="https://github.com/roj1512/bssg">Source</a>
       </p>
     </footer>
     <script src="gramjs.js"></script>
