Update footer copyright text

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </main>
     <footer class="mt mb">
       <p>
-        &copy; 2021 <a href="https://roj.im">Roj Serbest</a> ·
+        &copy; 2021 <a href="https://roj.im">Roj</a> ·
         <a href="https://github.com/roj1512/bssg">Source</a>
       </p>
     </footer>
