--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <footer class="mt mb">
       <p>
         &copy; 2021 <a href="https://roj.im">Roj</a> ·
-        <a href="https://github.com/roj1512/bssg">Source</a>
+        <a href="https://github.com/roj1512/ssg">Source</a>
       </p>
     </footer>
     <script src="gramjs.js"></script>
